[cvs]
	- Allow logprint to copy a log to a file (-C) and to dump
	  a log from beginning to end showing ondisk log record (-d).
	- Fix logprint handling of -f option - shouldn't be doing
	  the UUID check in that case, since we don't have the SB.

xfsprogs-2.6.13 (03 May 2004)
	- Zero out more at beginning and end of device at mkfs time
	  (get all old MD superblocks at the end, for mount by label).

xfsprogs-2.6.12 (30 April 2004)
	- Extract stripe unit/width from device mapper devices
	  (added libdisk infrastructure, used by mkfs.xfs).
	- Fix rounding in xfs_io(8) bytes read/written output.
	- Sync up user/kernel source in libxfs and headers.
	- Fix compiler warnings on 64 bit platforms.
	- Update i18n message catalog.

xfsprogs-2.6.11 (15 April 2004)
	- Fix file descriptor leak in path_to_fshandle. A file
	  was being opened but never closed, regardless of
	  whether that descriptor was being cached. Now close
	  the file on error or if it is not being cached.
	- Fix xfs_repair handling of a corrupt v2 directory with
	  multiple entries having the same name.

xfsprogs-2.6.10 (05 April 2004)
	- Fix botch in recent addition of new superblock field
	  (features2) which could result in filesystems with v2
	  logs being created with invalid superblock fields.
	  Thanks to Chris Pascoe for this fix.
	- Fix error when forcing a too-large v2 log stripe size
	  back to 32K.  Thanks to Chris Pascoe for this fix too.
	- Fix xfs_copy -d option so that it really does create a
	  duplicate filesystem (the log is duplicated too now in
	  that case, whereas previously a fresh log was created).

xfsprogs-2.6.9 (26 March 2004)
	- Update HFILES in xfsprogs/io/Makefile to package io/io.h

xfsprogs-2.6.8 (25 March 2004)
	- Fix xfs_db when dumping v2 dirs larger than the fsb size.
	- Several xfs_io additions - support for memory mapped areas,
	  multiple open files, expert mode (freeze, shutdown, error
	  injection, etc), fadvise (Linux-specific), allow user to