@@ -3,6 +3,8 @@
 	  a log from beginning to end showing ondisk log record (-d).
 	- Fix logprint handling of -f option - shouldn't be doing
 	  the UUID check in that case, since we don't have the SB.
+	- Remove MD device superblock "clean" check, following Neil
+	  Brown's advice.
 
 xfsprogs-2.6.13 (03 May 2004)
 	- Zero out more at beginning and end of device at mkfs time
